flicker issues resolved in menu

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3906,7 +3906,7 @@ marquee {
     }
     .nav-link.active {
         // font-family: $medium;
-        font-family: 'opensans_medium';
+        font-family: 'opensans-medium';
         color: #FCFCFC !important;
         background-color: #084C8F;
     }
@@ -4824,7 +4824,7 @@ marquee {
                 &:hover a.nav_link_item {
                     border-bottom: 3px solid #C7C7C7;
                     opacity: 1;
-                    font-family: $medium;
+                    font-weight: bold;
                     padding-bottom: 3px;
                 }
                 a.active {
