--- a/src/app/partners/partners.component.scss
+++ b/src/app/partners/partners.component.scss
@@ -2,8 +2,7 @@
 @import './../../assets/sharedscss/color';
 
 .partners_section{
-    margin-top: 5em;
-
+    margin-top: 4em;
 
     .main_title{
         font-family: $regular;
@@ -73,6 +72,8 @@
         margin: 0 auto;
         @media only screen and (max-width:600px){
             width: 90%;
+            font-size: 12px;
+            line-height: normal;
         }
     }
     .card_p_text{
